--- a/workflows/paper/app/styles/_global-remove.scss
+++ b/workflows/paper/app/styles/_global-remove.scss
@@ -2,6 +2,6 @@
   @extend %hide;
 }
 
-.dbox-app-promo-container, .notes-dbox-app-promo, .notes-footer-container, .hp-header {
+.dbox-app-promo-container, .notes-dbox-app-promo, .notes-footer-container, .hp-header, .hp-meeting-note-entry {
   @extend %hide;
 }
